# Cardinal

./: AGENTS.md  Makefile  README.md  cardinal.example.toml  pyproject.toml
.github/workflows/: ci.yml
docker/: .env.example  Dockerfile  docker-compose.yml  run.sh
src/cardinal/: __main__.py  cli.py  config.py  converters.py  database.py  errors.py  formatting.py  github_client.py  models.py  protocols.py  repo_cloner.py
tests/: conftest.py  test_cli.py  test_config.py  test_converters.py  test_database.py  test_github_client.py  test_models.py  test_repo_cloner.py
